Hive Change Log

Trunk (unreleased changes)

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-98. Dependency management with hadoop core using ivy.
    (Ashish Thusoo through zshao)

    HIVE-73. Thrift Server and Client for Hive (Raghu through zshao)

    HIVE-113. Distribute by and sort by support. (zshao)

    HIVE-118. Add date related functions. (zshao)

    HIVE-62. Support nested types.
    (Ashish Thusoo via dhruba)

  IMPROVEMENTS

    HIVE-95. Improve cli error messages by lowering backtracking to 1.
    (Pete Wyckoff through zshao)

    HIVE-102. Refactor DDLTask. (Johan Oskarsson through zshao)

    HIVE-85. New compression options for Hive. (Joydeep Sarma through zshao)

    HIVE-69. genMapRedTasks uses tree walker. (Namit through zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-92. Fixed union all for non-embedded query. (Namit Jain through zshao)

    HIVE-93. Dynamic serde to handle _-prefixed column names in DDL.
    (Pete Wyckoff through zshao)

    HIVE-127. Fetch Task to pass the jobconf to SerDe. (Namit through zshao)

    HIVE-116. Let test depend on deploy. (Johan Oskarsson through zshao)

    HIVE-90. Fixed TestGetDBs for File.list() order.
    (Johan Oskarsson through zshao)

    HIVE-111. Support join without a ON clause. (Namit through zshao)

    HIVE-77. Thread safe query execution. (Joydeep through zshao)

    HIVE-86. Drop table should not delete data for external tables.
    (Johan Oskarsson through zshao)

    HIVE-108. Sampling to use internal column name. (Namit through zshao)

    HIVE-60. Fix the build scripts for the new hive tree.
    (Ashish through zshao)

    HIVE-54. Create this file to record the patches going into a 
    particular release. (dhruba)

    HIVE-12. Improve README for Hive.
    (Ashish Thusoo via dhruba)

    HIVE-68. Fix casting to short.
    (Ashish Thusoo via dhruba)

    HIVE-70. A configuration variable that limits the amount of data
    writen by a task to its standard error.